- main content ".container" has been moved to sub-templates, so that the flexibility is higher - new box and column layout for the nodes and components (.box & .cbox) - stylesheet/design has been updated - added cluster building functionality (initial commit)

--- a/html/about.html
+++ b/html/about.html
@@ -1,31 +1,33 @@
-<div class="row">
-	<div class="col-xs-12">
-		<h1>About</h1>
-		<p>This application lets you export and visualize the current state of your Ambari managed Hadoop cluster.
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1>About</h1>
+			<p>This application lets you export and visualize the current state of your Ambari managed Hadoop cluster.</p>
 
-		<h2>Exporting Cluster information</h2>
-		<p>To use the exporter, simply copy the exporter.py file to your cluster or any other location that has access to the Ambari server. Afterwards, execute it with the following command. (Note: You can export service and component information to a file or stdout). The script will ask for an Ambari password during the execution.</p>
-		<pre>python exporter.py --target [host] --cluster [clustername] --user [ambari_username] --output [filename]</pre>
+			<h2>Exporting Cluster information</h2>
+			<p>To use the exporter, simply copy the exporter.py file to your cluster or any other location that has access to the Ambari server. Afterwards, execute it with the following command. (Note: You can export service and component information to a file or stdout). The script will ask for an Ambari password during the execution.</p>
+			<pre>python exporter.py --target [host] --cluster [clustername] --user [ambari_username] --output [filename]</pre>
 
-		For example:<br />
-		<pre>python exporter.py --target c6601.ambari.apache.org:8080 --cluster mycluster --user admin --output export.json</pre>
+			For example:<br />
+			<pre>python exporter.py --target c6601.ambari.apache.org:8080 --cluster mycluster --user admin --output export.json</pre>
 
 
-		<h2>Using the Angular App</h2>
-		<p>The Angular app provides an easy way of displaying the exported cluster. Just open the html/index.html file on your webserver, import your cluster and you are good to go.</p>
-		<h3>Import Cluster and Environment</h3>
-		<p>To import your cluster and enviornment, go to the Import/Export page under Settings. The enviornment has a pre-defined default value, the cluster field is expecting the output from the exporter script (exporter.py)</p>
-		
-		<h3>Export Environment</h3>
-		<p>If you have changed the enviornment and want to export it now, go to Settings->Import/Export and copy the Enviornment from the textarea under Export</p>
+			<h2>Using the Angular App</h2>
+			<p>The Angular app provides an easy way of displaying the exported cluster. Just open the html/index.html file on your webserver, import your cluster and you are good to go.</p>
+			<h3>Import Cluster and Environment</h3>
+			<p>To import your cluster and enviornment, go to the Import/Export page under Settings. The enviornment has a pre-defined default value, the cluster field is expecting the output from the exporter script (exporter.py)</p>
+			
+			<h3>Export Environment</h3>
+			<p>If you have changed the enviornment and want to export it now, go to Settings->Import/Export and copy the Enviornment from the textarea under Export</p>
 
-		<h3>Adjusting the enviornment</h3>
-		<p>You can change the naming, grouping and coloring of services and components by going to Settings->Components or Settings->Services. Alternatively you can modify the JSON definition from the Import/Export page.</p>
-		
-		<h3>Elements/Naming</h3>
-		<strong>Service: </strong><p>Refers to a service from the Hadoop enviornment or any other application that has been added to the Enviornment. (e.g. HDFS, HBase, Storm). A Service can have multiple components.</p>
-		<strong>Component: </strong><p>Components are part of a service, e.g. Namenode (HDFS), Journalnode (HDFS), RegionServer (HBase)</p>
-		<strong>Environment: </strong><p>In case of this app, refers to a definition of possible services and components. Only services and components that have been specified in the enviornment definition will be reconized during the import. The environment definition also includes grouping and coloring configurations.</p>
-		<strong>Cluster: </strong><p>A combination of hosts, services, components and some additional cluster information. At the moment components are identified by unique ids, e.g. FLUME_HANDLER, this is one of the reasons why component IDS within an Enviornment need to be unique.</p>
+			<h3>Adjusting the enviornment</h3>
+			<p>You can change the naming, grouping and coloring of services and components by going to Settings->Components or Settings->Services. Alternatively you can modify the JSON definition from the Import/Export page.</p>
+			
+			<h3>Elements/Naming</h3>
+			<strong>Service: </strong><p>Refers to a service from the Hadoop enviornment or any other application that has been added to the Enviornment. (e.g. HDFS, HBase, Storm). A Service can have multiple components.</p>
+			<strong>Component: </strong><p>Components are part of a service, e.g. Namenode (HDFS), Journalnode (HDFS), RegionServer (HBase)</p>
+			<strong>Environment: </strong><p>In case of this app, refers to a definition of possible services and components. Only services and components that have been specified in the enviornment definition will be reconized during the import. The environment definition also includes grouping and coloring configurations.</p>
+			<strong>Cluster: </strong><p>A combination of hosts, services, components and some additional cluster information. At the moment components are identified by unique ids, e.g. FLUME_HANDLER, this is one of the reasons why component IDS within an Enviornment need to be unique.</p>
+		</div>
 	</div>
 </div>
