--- a/html/importexport.html
+++ b/html/importexport.html
@@ -1,29 +1,31 @@
-<div class="row">
-    <div class="col-xs-12">
-    	<h1>Import</h1>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label>Environment</label>
-                <textarea class="form-control" ng-model="importEnv" rows="5"></textarea>
-            </div>
-            <div class="form-group">
-                <label>Cluster</label>
-                <textarea class="form-control" ng-model="importCluster" rows="5"></textarea>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-default" ng-click="import()">Import</button>
-            </div>
-        </form>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+        	<h1>Import</h1>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label>Environment</label>
+                    <textarea class="form-control" ng-model="importEnv" rows="5"></textarea>
+                </div>
+                <div class="form-group">
+                    <label>Cluster</label>
+                    <textarea class="form-control" ng-model="importCluster" rows="5"></textarea>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-default" ng-click="import()">Import</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <h1>Export</h1>
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label>Environment</label>
-                <textarea class="form-control" ng-model="exportEnv" rows="5"></textarea>
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Export</h1>
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label>Environment</label>
+                    <textarea class="form-control" ng-model="exportEnv" rows="5"></textarea>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
