--- a/html/index.html
+++ b/html/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     <link rel="stylesheet" href="../css/xeditable.css">
     
-    <script type="text/javascript">
-        (function(){
-        })();
-    </script>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.js"></script>
     <script type="text/javascript" src="../js/angular.js"></script>
     <script type="text/javascript" src="../js/angular-route.js"></script>
     <script type="text/javascript" src="../js/angular-dragdrop.js"></script>
     <script type="text/javascript" src="../js/xeditable.js"></script>
+    <script type="text/javascript" src="../js/ui-bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/clipboard.min.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript">
+        (function(){
+        })();
+    </script>
 </head>
 <body ng-controller="MainController as main">
 
@@ -37,6 +39,7 @@
           <ul class="nav navbar-nav">
             <li><a href="#/">Cluster</a></li>
             <li><a href="#/build">Build</a></li>
+            <li><a href="#/blueprint">Blueprint</a></li>
             <li><a href="#/legend">Legend</a></li>
             <!--<li><a href="#/configuration">Configuration</a></li>-->
             <li class="dropdown">
